--- a/about.html
+++ b/about.html
@@ -4,106 +4,107 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>소개 - Project.PAW</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="common.css"/>
   <style>
     body{
+      margin:0;
+      background:#fff;
       font-family:'SUIT Variable','Pretendard',sans-serif;
-      margin:0;background:#fafafa;color:#111;
+      color:#111;
+      line-height:1.8;
     }
-    .container{max-width:880px;margin:0 auto;padding:60px 20px}
-    h1{font-size:2.6rem;font-weight:900;margin-bottom:24px;line-height:1.4;color:#111}
-    h2{font-size:1.6rem;font-weight:800;margin:50px 0 20px;color:#111}
-    p{font-size:1.2rem;line-height:1.9;color:#333;margin:0 0 22px}
-    strong{color:#000;font-weight:800}
-
-    .hero-box{
-      background:#f9fafb;border:1px solid #e5e7eb;border-radius:14px;
-      padding:60px 24px;text-align:center;margin-bottom:80px
+    main{max-width:820px;margin:0 auto;padding:60px 20px}
+    h1{
+      font-size:2.4rem;
+      font-weight:900;
+      margin-bottom:40px;
+      text-align:center;
+      line-height:1.4;
     }
-    .hero-box h1{font-size:2.3rem;margin-bottom:18px}
-    .hero-box p{font-size:1.3rem;color:#555;margin:0 auto;max-width:680px}
-
+    h2{
+      font-size:1.6rem;
+      font-weight:800;
+      margin:40px 0 16px;
+    }
+    p{
+      font-size:1.2rem;
+      margin:0 0 22px;
+      color:#333;
+    }
     .signature{
-      text-align:left;font-size:1rem;color:#666;margin-top:35px;font-style:italic
+      font-size:1rem;
+      color:#666;
+      margin-top:30px;
+      text-align:left;
     }
 
-    /* floating cta */
-    .cta-float{
-      position:fixed;bottom:20px;right:20px;display:flex;
-      flex-direction:column;gap:12px;z-index:100
+    /* CTA mini buttons */
+    .cta-dock{
+      position:fixed;
+      bottom:20px;
+      right:20px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      z-index:50;
     }
-    .cta-float button{
-      border:none;padding:12px 16px;border-radius:12px;
-      font-weight:700;font-size:.95rem;cursor:pointer;
-      display:flex;align-items:center;gap:6px;
-      box-shadow:0 4px 10px rgba(0,0,0,0.15)
+    .cta-dock a{
+      display:inline-flex;
+      align-items:center;
+      gap:6px;
+      padding:10px 14px;
+      border-radius:10px;
+      font-weight:700;
+      font-size:.9rem;
+      text-decoration:none;
+      box-shadow:0 4px 10px rgba(0,0,0,0.12);
+      transition:.2s;
     }
+    .cta-dock a:hover{transform:translateY(-2px)}
     .btn-kakao{background:#FEE500;color:#111}
-    .btn-kakao:hover{background:#e5d200}
-    .btn-link{background:#6b7280;color:#fff}
-    .btn-link:hover{background:#555}
-
-    @media(max-width:600px){
-      h1{font-size:2.2rem}
-      p{font-size:1.1rem}
-      .cta-float button{font-size:.9rem;padding:10px 14px}
-    }
+    .btn-share{background:#555;color:#fff}
   </style>
 </head>
 <body>
   <!-- Header -->
   <div data-include="header"></div>
 
-  <main class="container">
-    <!-- Hero -->
-    <section class="hero-box">
-      <h1>⚡ 아직은 작은 실험이지만 깊고 따뜻하게 나아가겠습니다.</h1>
-      <p>Project.PAW는 믿습니다. 따뜻한 연결은 작아도 깊게 번집니다.</p>
-    </section>
+  <main>
+    <h1>⚡ 아직은 작은 실험이지만<br/>깊고 따뜻하게 나아가겠습니다.</h1>
 
-    <!-- 시작 -->
-    <section>
-      <h2>시작</h2>
-      <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
-         용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.</p>
-      <p>누구는 책임을 짊어지고,<br/>
-         누구는 도와주고 싶다고 말했습니다.</p>
-      <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
-    </section>
+    <h2>시작</h2>
+    <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.<br/>
+       용기 있는 구조 뒤에는 늘 병원비라는 벽이 있었습니다.</p>
+    <p>누구는 책임을 짊어지고,<br/>
+       누구는 도와주고 싶다고 말했습니다.</p>
+    <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
 
-    <!-- 본질 -->
-    <section>
-      <h2>본질</h2>
-      <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
-      <p>사람의 마음이 머뭇거릴 때,<br/>
-         그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
-      <p>그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.</p>
+    <h2>본질</h2>
+    <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
+    <p>사람의 마음이 머뭇거릴 때,<br/>
+       그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
+    <p>그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.</p>
 
-      <div class="signature">– Project.PAW 시작한 사람 –</div>
-    </section>
+    <p class="signature">– Project.PAW 시작한 사람 –</p>
   </main>
+
+  <!-- CTA mini buttons -->
+  <div class="cta-dock">
+    <a href="project_list.html" class="btn-kakao">❤️ 후원하러 가기</a>
+    <a href="#" class="btn-share" id="shareCopy">🔗 Paw 링크 복사</a>
+  </div>
 
   <!-- Footer -->
   <div data-include="footer"></div>
 
-  <!-- Floating CTA -->
-  <div class="cta-float">
-    <button class="btn-kakao" onclick="alert('카카오톡 오픈채팅으로 연결됩니다 (MVP 단계)')">
-      💛 후원하기
-    </button>
-    <button class="btn-link" id="copyBtn">
-      🔗 PAW 링크 복사
-    </button>
-  </div>
-
-  <script type="module" src="js/include.js"></script>
   <script type="module">
     import { injectLayout } from "./js/include.js";
     injectLayout();
 
-    document.getElementById("copyBtn").addEventListener("click",()=>{
-      navigator.clipboard.writeText(window.location.href)
-        .then(()=>alert("현재 페이지 링크가 복사되었습니다."));
+    // 링크 복사
+    document.getElementById("shareCopy")?.addEventListener("click",()=>{
+      navigator.clipboard.writeText(window.location.origin + "/about.html")
+        .then(()=>alert("링크가 복사되었습니다."));
     });
   </script>
 </body>
