--- a/login.html
+++ b/login.html
@@ -1,92 +1,115 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project.PAW - 로그인</title>
-  <link rel="stylesheet" href="styles.css">
-  <script type="module">
-    import { auth, signInWithEmailAndPassword, signOut } from "./js/firebase.js";
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Project.PAW — 로그인</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
 
-    window.login = async () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      try {
-        await signInWithEmailAndPassword(auth, email, password);
-        alert("로그인 성공!");
-        location.href = "index.html";
-      } catch (e) {
-        alert("로그인 실패: " + e.message);
-      }
-    };
+  <!-- Google Identity Services -->
+  <script async defer src="https://accounts.google.com/gsi/client"></script>
+  <!-- Kakao SDK -->
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>Kakao.init('9917e1abbf40830145f513dc1121157b');</script>
+  <!-- Naver SDK -->
+  <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js"></script>
+  <!-- FontAwesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
 
-    window.logout = async () => {
-      try {
-        await signOut(auth);
-        alert("로그아웃 완료!");
-        location.href = "index.html";
-      } catch (e) {
-        console.error("로그아웃 실패:", e);
-      }
-    };
-  </script>
   <style>
-    body { margin: 0; font-family: "Noto Sans KR", sans-serif; background: #fff; color: #333; }
-    header {
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 1rem 2rem; background: #ffffff; border-bottom: 1px solid #eee;
-      position: sticky; top: 0; z-index: 10;
-    }
-    nav { display: flex; gap: 1rem; }
-    nav a, nav button {
-      background: none; border: none; cursor: pointer;
-      font-size: 1rem; color: #333; text-decoration: none; transition: color 0.2s;
-    }
-    nav a:hover, nav button:hover { color: #ff6b6b; }
-    main { padding: 2rem; max-width: 400px; margin: auto; }
-    form {
-      display: flex; flex-direction: column; gap: 1rem;
-      padding: 2rem; background: #fafafa; border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-    }
-    input {
-      padding: 0.8rem; border: 1px solid #ddd; border-radius: 8px; font-size: 1rem;
-    }
-    button {
-      padding: 0.8rem; background: #ff6b6b; border: none; border-radius: 8px;
-      font-size: 1rem; font-weight: bold; color: #fff; cursor: pointer;
-      transition: background 0.2s;
-    }
-    button:hover { background: #ff4c4c; }
+    main { max-width:420px; margin:60px auto; padding:32px; background:#fff;
+      border-radius:16px; box-shadow:0 4px 16px rgba(0,0,0,0.08); text-align:center; }
+    main h2 { font-size:1.6rem; font-weight:800; margin-bottom:20px; color:#111; }
+    form { display:flex; flex-direction:column; gap:14px; margin-bottom:24px; }
+    form input { padding:12px; border:1px solid #ddd; border-radius:8px; font-size:1rem; }
+    form button { padding:12px; border:none; border-radius:8px; background:#E87722; 
+      color:#fff; font-weight:700; cursor:pointer; }
+    form button:hover { background:#d4661a; }
+    .sns-buttons { display:flex; justify-content:center; gap:20px; margin-top:12px; }
+    .login-button { width:52px; height:52px; border-radius:50%; display:flex; justify-content:center; align-items:center;
+      font-size:22px; cursor:pointer; transition:.2s; }
+    .login-button:hover { transform:scale(1.1); }
+    .google{background:#db4437;color:#fff;}
+    .kakao{background:#fee500;color:#000;font-weight:bold;}
+    .naver{background:#1ec800;color:#fff;}
+    #naverIdLogin{display:none;}
   </style>
 </head>
 <body>
-  <header>
-    <h1>🐾 Project.PAW</h1>
-    <nav>
-      <a href="index.html">홈</a>
-      <a href="project_list.html">후원하기</a>
-      <a href="create.html">등록하기</a>
-      <a href="about.html">About</a>
-      <button onclick="logout()">로그아웃</button>
-    </nav>
-  </header>
+  <!-- header include -->
+  <div data-include="header"></div>
 
   <main>
-    <h2 style="text-align:center;margin-bottom:1rem;">로그인</h2>
+    <h2>로그인</h2>
     <form onsubmit="event.preventDefault(); login();">
       <input type="email" id="email" placeholder="이메일" required>
       <input type="password" id="password" placeholder="비밀번호" required>
       <button type="submit">로그인</button>
     </form>
+
+    <h3 style="margin:1.5rem 0 1rem;">SNS 계정으로 간편로그인</h3>
+    <div class="sns-buttons">
+      <div class="login-button google" id="google-login-btn"><i class="fab fa-google"></i></div>
+      <div class="login-button kakao" id="kakao-login-btn">K</div>
+      <div class="login-button naver" id="naver-login-btn">N</div>
+    </div>
+    <div id="naverIdLogin"></div>
   </main>
 
-  <footer style="margin-top:3rem; padding:2rem; background:#fafafa; text-align:center; font-size:0.9rem; color:#666;">
-    <p>© 2025 Project.PAW</p>
-    <p>
-      <a href="about.html">About</a> | 
-      <a href="login.html">로그인</a>
-    </p>
-  </footer>
+  <!-- footer include -->
+  <div data-include="footer"></div>
+
+  <script type="module">
+    import { auth, signInWithEmailAndPassword, signOut } from "./js/firebase.js";
+    import { injectLayout } from "./js/include.js";
+    injectLayout({ active:'login' });
+
+    window.login = async () => {
+      const email=document.getElementById("email").value;
+      const password=document.getElementById("password").value;
+      try {
+        await signInWithEmailAndPassword(auth,email,password);
+        alert("로그인 성공!"); location.href="index.html";
+      } catch(e){ alert("로그인 실패: "+e.message); }
+    };
+    window.logout = async () => { try{ await signOut(auth); alert("로그아웃 완료!"); location.href="index.html"; }catch(e){} };
+  </script>
+
+  <script>
+    // Kakao
+    document.getElementById('kakao-login-btn').addEventListener('click', function(){
+      Kakao.Auth.login({
+        scope:'profile_nickname,account_email',
+        success:function(){Kakao.API.request({url:'/v2/user/me',success:function(res){
+          alert(`${res.kakao_account.profile.nickname}님 환영합니다!`);
+          localStorage.setItem("isLoggedIn","true");
+          location.href="index.html";
+        }});},fail:function(){alert('카카오 로그인 실패');}
+      });
+    });
+    // Google
+    window.onload=function(){
+      google.accounts.id.initialize({
+        client_id:"656866984778-8jsv71j60fsjf4d34d0hav83i4ktf8u7.apps.googleusercontent.com",
+        callback:handleCredentialResponse
+      });
+      document.getElementById('google-login-btn').addEventListener('click',()=>google.accounts.id.prompt());
+      // Naver
+      const naverLogin=new naver.LoginWithNaverId({
+        clientId:"SO07cKed8aScWuacSBqk",
+        callbackUrl:window.location.origin+"/naver_callback.html",
+        isPopup:true, loginButton:{color:"green",type:3,height:40}
+      });
+      naverLogin.init();
+      document.getElementById('naver-login-btn').addEventListener('click',()=>{document.querySelector('#naverIdLogin a').click();});
+    };
+    function handleCredentialResponse(response){
+      const payload=JSON.parse(atob(response.credential.split('.')[1]));
+      alert(`${payload.name||payload.email}님 환영합니다!`);
+      localStorage.setItem("isLoggedIn","true"); location.href="index.html";
+    }
+  </script>
 </body>
 </html>
