--- a/project.html
+++ b/project.html
@@ -7,9 +7,7 @@
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
-  <!-- ✅ Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-
   <style>
     :root{--ink:#111;--sub:#555;--accent:#E87722;--line:#eaeaea;--bg:#fafafa}
     body{margin:0;background:var(--bg);color:var(--ink);
@@ -23,7 +21,7 @@
       color:#fff;padding:20px}
     .overlay .badge{background:var(--accent);padding:6px 12px;border-radius:8px;font-weight:700}
     .overlay h1{margin:8px 0;font-size:1.6rem;font-weight:900}
-    .overlay .summary{font-size:1rem;opacity:.9}
+    .overlay .summary{font-size:1rem;opacity:.9;max-height:3.6em;overflow:hidden;text-overflow:ellipsis}
     .key-message{margin-top:6px;color:#FFD166;font-weight:700}
 
     .hero-body{padding:24px}
@@ -34,13 +32,11 @@
     .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-top:8px}
     .stats span strong{font-size:1.05rem;font-weight:800;color:var(--ink);margin-left:4px}
 
-    /* 썸네일 strip */
     .thumb-strip{display:flex;gap:8px;overflow-x:auto;padding:10px;background:#fafafa}
     .thumb-strip img{height:70px;width:70px;object-fit:cover;border-radius:8px;cursor:pointer;
       border:2px solid transparent;flex-shrink:0}
     .thumb-strip img.active{border-color:var(--accent)}
 
-    /* 버튼 그룹 */
     .action-buttons{display:flex;gap:10px;margin-top:18px}
     .btn-kakao{flex:1;background:#FEE500;color:#111;padding:14px 18px;
       border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
@@ -68,9 +64,7 @@
   </main>
   <div data-include="footer"></div>
 
-  <!-- ✅ Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { getProjectById } from './js/api.js';
@@ -78,54 +72,22 @@
     import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
 
     injectLayout({ active:'project' });
-
     const $detail=document.getElementById('project-detail');
     const fmt=n=>Number(n||0).toLocaleString('ko-KR');
 
-    function candidatesOf(p){
-      const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
-      ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image'].forEach(k=>push(p[k]));
-      ['galleryUrls','images','photos','files','receiptUrls'].forEach(k=>{
-        const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{
-          if(typeof it==='string') push(it);
-          else if(it&&(it.url||it.path)) push(it.url||it.path);
-        });
-      });
-      return out;
-    }
-
-    async function toHttpUrl(raw){
-      if(!raw) return null;
-      let v=String(raw).trim();
-      if(/^(https?:|data:|blob:)/i.test(v)) return v;
-      if(v.startsWith('/')) v=v.slice(1);
-      try{return await getDownloadURL(ref(storage,v));}catch{return null;}
-    }
-
-    async function galleryHttpUrls(p){
-      const cands=candidatesOf(p);
-      const urls=await Promise.all(cands.map(toHttpUrl));
-      const uniq=[],seen=new Set();
-      for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);} }
-      return uniq.length?uniq:['img/placeholder.svg'];
-    }
-
-    function getId(){return new URLSearchParams(location.search).get("id");}
-
     async function render(){
-      const id=getId();
+      const id=new URLSearchParams(location.search).get("id");
       if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
       try{
         const p=await getProjectById(id);
         if(!p){$detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>';return;}
 
-        const imgs=await galleryHttpUrls(p);
+        const imgs=[p.coverUrl || 'img/placeholder.svg', ...(p.galleryUrls||[])];
         const goal=Number(p.goalAmount||0);
         const current=Number(p.currentAmount||0);
         const rate=goal?Math.floor(current/goal*100):0;
 
         $detail.innerHTML=`
-          <!-- 사진 -->
           <section class="hero-card">
             <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -147,14 +109,9 @@
                 <span class="carousel-control-next-icon"></span>
               </button>
             </div>
-
-            <!-- 썸네일 strip -->
             <div class="thumb-strip">
-              ${imgs.map((url,i)=>`
-                <img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
+              ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
             </div>
-
-            <!-- Status -->
             <div class="hero-body">
               <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
               <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
@@ -172,45 +129,23 @@
             <p>${(p.description||'').replace(/\n/g,'<br/>')}</p>
           </section>
 
-          <!-- 후원/공유 버튼 -->
           <div class="action-buttons">
-            ${p.kakaoChatUrl ? `
-              <a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''}
+            ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''}
             <button class="btn-share" id="shareCopy">🔗 링크 복사</button>
           </div>
 
-          <!-- Beta 안내 -->
           <section class="section-card">
             <h2>Beta 안내</h2>
-            <p style="line-height:1.6">
-              ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
-              후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 매일 수동으로 모금액/참여자 수를 업데이트합니다.<br/>
-              정식 서비스에서는 PG 결제를 통한 자동화된 투명 시스템이 제공될 예정입니다.
-            </p>
+            <p>⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 수동으로 업데이트합니다.</p>
           </section>
         `;
 
-        // 🔗 링크복사
-        document.getElementById("shareCopy")?.addEventListener("click",()=>{
-          navigator.clipboard.writeText(window.location.href)
-            .then(()=>alert("링크가 복사되었습니다."));
-        });
-
-        // ✅ 썸네일 클릭 시 캐러셀 이동
-        const carouselEl=document.querySelector('#carouselProject');
-        const carousel=new bootstrap.Carousel(carouselEl);
+        document.getElementById("shareCopy")?.addEventListener("click",()=>navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다.")));
+        const carousel=new bootstrap.Carousel(document.querySelector('#carouselProject'));
         document.querySelectorAll('.thumb-strip img').forEach(img=>{
-          img.addEventListener('click',()=>{
-            const idx=parseInt(img.dataset.index,10);
-            carousel.to(idx);
-            document.querySelectorAll('.thumb-strip img').forEach(t=>t.classList.remove('active'));
-            img.classList.add('active');
-          });
+          img.addEventListener('click',()=>{carousel.to(parseInt(img.dataset.index,10));document.querySelectorAll('.thumb-strip img').forEach(t=>t.classList.remove('active'));img.classList.add('active');});
         });
-      }catch(e){
-        console.error(e);
-        $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
-      }
+      }catch(e){console.error(e);$detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
     }
     render();
   </script>
