--- a/project.html
+++ b/project.html
@@ -9,52 +9,9 @@
   <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
-    :root{--ink:#111;--sub:#555;--accent:#E87722;--line:#eaeaea;--bg:#fafafa}
-    body{margin:0;background:var(--bg);color:var(--ink);
-      font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
-    .wrap{max-width:860px;margin:0 auto;padding:20px 16px}
-
-    .hero-card{background:#fff;border-radius:20px;overflow:hidden;
-               box-shadow:0 6px 14px rgba(0,0,0,0.08);margin-bottom:24px}
-    .overlay{position:absolute;bottom:0;left:0;right:0;
-      background:linear-gradient(to top,rgba(0,0,0,.6),rgba(0,0,0,0));
-      color:#fff;padding:20px}
-    .overlay .badge{background:var(--accent);padding:6px 12px;border-radius:8px;font-weight:700}
-    .overlay h1{margin:8px 0;font-size:1.6rem;font-weight:900}
-    .overlay .summary{font-size:1rem;opacity:.9;max-height:3.6em;overflow:hidden;text-overflow:ellipsis}
-    .key-message{margin-top:6px;color:#FFD166;font-weight:700}
-
-    .hero-body{padding:24px}
-    .hearts{font-size:1.1rem;font-weight:700;color:var(--accent);margin-bottom:12px}
-    .progress{background:#e5e7eb;height:16px;border-radius:12px;overflow:hidden;margin:14px 0}
-    .progress .bar{height:100%;background:var(--accent);color:#fff;
-                   text-align:center;font-size:.8rem;font-weight:600}
-    .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-top:8px}
-    .stats span strong{font-size:1.05rem;font-weight:800;color:var(--ink);margin-left:4px}
-
-    .thumb-strip{display:flex;gap:8px;overflow-x:auto;padding:10px;background:#fafafa}
-    .thumb-strip img{height:70px;width:70px;object-fit:cover;border-radius:8px;cursor:pointer;
-      border:2px solid transparent;flex-shrink:0}
-    .thumb-strip img.active{border-color:var(--accent)}
-
-    .action-buttons{display:flex;gap:10px;margin-top:18px}
-    .btn-kakao{flex:1;background:#FEE500;color:#111;padding:14px 18px;
-      border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
-    .btn-kakao:hover{background:#e5d200}
-    .btn-share{flex:1;background:#6b7280;color:#fff;padding:14px 18px;
-      border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none}
-    .btn-share:hover{background:#555}
-    @media(max-width:600px){
-      .action-buttons{flex-direction:column}
-      .btn-kakao,.btn-share{width:100%}
-    }
-
-    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
-                  box-shadow:0 4px 10px rgba(0,0,0,0.05)}
-    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
-    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
-
-    .cta-dock{display:none}
+    .section-card h2{font-size:1.4rem;font-weight:800;margin-bottom:16px;color:#E87722}
+    .section-card .story{white-space:pre-line;font-size:1.1rem;line-height:1.8;color:#222}
+    .section-card .story a{color:#2563eb;text-decoration:underline}
   </style>
 </head>
 <body>
@@ -68,84 +25,26 @@
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { getProjectById } from './js/api.js';
-    import { storage } from './js/firebase.js';
-    import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
 
     injectLayout({ active:'project' });
     const $detail=document.getElementById('project-detail');
+
     const fmt=n=>Number(n||0).toLocaleString('ko-KR');
+    function linkify(text){
+      return text.replace(/(https?:\/\/[^\s]+)/g,'<a href="$1" target="_blank">$1</a>');
+    }
 
     async function render(){
       const id=new URLSearchParams(location.search).get("id");
-      if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
-      try{
-        const p=await getProjectById(id);
-        if(!p){$detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>';return;}
+      const p=await getProjectById(id);
+      if(!p){$detail.innerHTML='<div>존재하지 않는 프로젝트</div>';return;}
 
-        const imgs=[p.coverUrl || 'img/placeholder.svg', ...(p.galleryUrls||[])];
-        const goal=Number(p.goalAmount||0);
-        const current=Number(p.currentAmount||0);
-        const rate=goal?Math.floor(current/goal*100):0;
-
-        $detail.innerHTML=`
-          <section class="hero-card">
-            <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                ${imgs.map((url,i)=>`
-                  <div class="carousel-item ${i===0?'active':''}">
-                    <img src="${url}" class="d-block w-100" style="height:340px;object-fit:cover" alt="img${i}">
-                    <div class="overlay">
-                      <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
-                      <h1>PAW #${p.projectNumber ?? '-'} ${p.name??'(이름 없음)'}</h1>
-                      <p class="summary">${p.summary??''}</p>
-                      ${p.keyMessage?`<p class="key-message">❝ ${p.keyMessage} ❞</p>`:''}
-                    </div>
-                  </div>`).join('')}
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-              </button>
-            </div>
-            <div class="thumb-strip">
-              ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
-            </div>
-            <div class="hero-body">
-              <div class="hearts">❤️ 연결된 마음 <strong>${p.supporterCount??0}</strong>명</div>
-              <div class="progress"><div class="bar" style="width:${rate}%">${rate}%</div></div>
-              <div class="stats">
-                <span>목표 <strong>${fmt(goal)}</strong>원</span>
-                <span>현재 <strong>${fmt(current)}</strong>원</span>
-                <span>구조자 <strong>${p.rescuerName??'익명'}</strong></span>
-              </div>
-            </div>
-          </section>
-
-          <!-- 스토리 -->
-          <section class="section-card">
-            <h2>스토리</h2>
-            <p>${(p.description||'').replace(/\n/g,'<br/>')}</p>
-          </section>
-
-          <div class="action-buttons">
-            ${p.kakaoChatUrl ? `<a href="${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''}
-            <button class="btn-share" id="shareCopy">🔗 링크 복사</button>
-          </div>
-
-          <section class="section-card">
-            <h2>Beta 안내</h2>
-            <p>⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 수동으로 업데이트합니다.</p>
-          </section>
-        `;
-
-        document.getElementById("shareCopy")?.addEventListener("click",()=>navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다.")));
-        const carousel=new bootstrap.Carousel(document.querySelector('#carouselProject'));
-        document.querySelectorAll('.thumb-strip img').forEach(img=>{
-          img.addEventListener('click',()=>{carousel.to(parseInt(img.dataset.index,10));document.querySelectorAll('.thumb-strip img').forEach(t=>t.classList.remove('active'));img.classList.add('active');});
-        });
-      }catch(e){console.error(e);$detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
+      $detail.innerHTML=`
+        <section class="section-card">
+          <h2>스토리</h2>
+          <div class="story">${linkify(p.description||'')}</div>
+        </section>
+      `;
     }
     render();
   </script>
