--- a/project.html
+++ b/project.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ko">
 <head>
@@ -113,6 +112,12 @@
 
     function getId(){return new URLSearchParams(location.search).get("id");}
 
+    // ✅ description 안전 처리
+    function formatDescription(text){
+      if(!text) return '';
+      return text.replace(/\n/g,'<br/>');
+    }
+
     async function render(){
       const id=getId();
       if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
@@ -170,7 +175,7 @@
           <!-- 스토리 -->
           <section class="section-card">
             <h2>스토리</h2>
-            <p>${(p.description||'').replace(/\n/g,'<br/>')}</p>
+            <p>${formatDescription(p.description)}</p>
           </section>
 
           <!-- 후원/공유 버튼 -->
