--- a/about.html
+++ b/about.html
@@ -33,8 +33,9 @@
       font-weight:600; /* 기본 bold */
       margin:0 0 22px;
     }
-    strong {
-      color:#E87722; /* 강조 문구 오렌지 */
+    /* ✅ 본문 안 strong만 오렌지 강조 */
+    main strong {
+      color:#E87722;
     }
     .signature {
       margin-top:50px;
