--- a/about.html
+++ b/about.html
@@ -71,20 +71,22 @@
   <div data-include="header"></div>
 
   <main>
-    <h1>⚡ 아직은 작은 실험이지만 깊고 따뜻하게 나아가겠습니다.</h1>
+    <h1>⚡ 마음들이 연결되는 작은 실험입니다.</h1>
 
     <h2>시작한 이유</h2>
-    <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.</p>
-    <p>용기 있는 구조 뒤에는 늘 병원비라는 <strong>현실</strong>이 있었습니다.</p>
-    <p>누구는 책임을 짊어지고, 누구는 도와주고 싶다고 말했습니다.</p>
-    <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
+    <p>SNS에는 매일 구조 이야기가 올라왔습니다.</p>
+    <p>그리고 용기 있는 구조 뒤에는 늘 병원비라는 <strong>현실</strong>이 있었습니다.</p>
+    <p><strong>구조자는 책임을 짊어졌습니다.</strong></p>
+    <p><strong>많은 사람들은 도와주고 싶다고 말했습니다.</strong></p>
+    <p>Project.PAW는 그 두 마음을 <strong>이어주고 싶습니다.</strong></p>
 
     <h2>추구하는 본질</h2>
-    <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
+    <p>책임은 나누어지고, 믿음은 쌓이며, 그렇게 이어진 마음은 단순한 금액보다 오래 남습니다.</p>
+    <p><strong>따뜻한 마음이 흩어지지 않고 계속 이어지길</strong> 바랍니다.</p>
     <p>사람의 마음이 머뭇거릴 때, 그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
-    <p>그게 Project.PAW가 존재하는 <strong>본질적 이유</strong>입니다.</p>
+    <p>그게 Project.PAW가 <strong>시작된 본질적 이유</strong>입니다.</p>
 
-    <p class="signature">– PROJECT.PAW 드림 –</p>
+    <p class="signature">– Project.PAW 드림 –</p>
   </main>
 
   <div class="cta-dock">
