--- a/about.html
+++ b/about.html
@@ -8,7 +8,9 @@
   <style>
     body {
       font-family:'SUIT Variable','Pretendard',sans-serif;
-      margin:0;background:#fafafa;color:#111;
+      margin:0;
+      background:#fafafa;
+      color:#111;
     }
     main {
       max-width:820px;
@@ -17,25 +19,15 @@
       line-height:1.9;
     }
     h1 {
-      font-size:2.6rem;
-      font-weight:900;
+      font-size:2.2rem;
+      font-weight:800;
       text-align:center;
       margin-bottom:60px;
     }
-    h2 {
-      font-size:1.5rem;
-      font-weight:800;
-      margin:70px 0 24px;
-      color:#111;
-    }
     p {
-      font-size:1.15rem;
-      font-weight:600; /* 기본 bold */
+      font-size:1.1rem;
+      font-weight:500;
       margin:0 0 22px;
-    }
-    /* ✅ 본문 안 strong만 오렌지 강조 */
-    main strong {
-      color:#E87722;
     }
     .signature {
       margin-top:50px;
@@ -73,18 +65,19 @@
   <main>
     <h1>⚡ 마음들이 연결되는 작은 실험입니다.</h1>
 
-    <h2>시작한 이유</h2>
     <p>SNS에는 매일 구조 이야기가 올라왔습니다.</p>
-    <p>그리고 용기 있는 구조 뒤에는 늘 병원비라는 <strong>현실</strong>이 있었습니다.</p>
-    <p><strong>구조자는 책임을 짊어졌습니다.</strong></p>
-    <p><strong>많은 사람들은 도와주고 싶다고 말했습니다.</strong></p>
-    <p>Project.PAW는 그 두 마음을 <strong>이어주고 싶습니다.</strong></p>
+    <p>그리고 용기 있는 구조 뒤에는 늘 병원비라는 현실이 있었습니다.</p>
 
-    <h2>추구하는 본질</h2>
+    <p>구조자는 책임을 짊어졌습니다.</p>
+    <p>많은 사람들은 도와주고 싶다고 말했습니다.</p>
+    <p>Project.PAW는 그 두 마음을 이어주고 싶습니다.</p>
+
     <p>책임은 나누어지고, 믿음은 쌓이며, 그렇게 이어진 마음은 단순한 금액보다 오래 남습니다.</p>
-    <p><strong>따뜻한 마음이 흩어지지 않고 계속 이어지길</strong> 바랍니다.</p>
-    <p>사람의 마음이 머뭇거릴 때, 그 망설임에 <strong>용기</strong>를 덧붙여주는 일.</p>
-    <p>그게 Project.PAW가 <strong>시작된 본질적 이유</strong>입니다.</p>
+
+    <p>따뜻한 마음이 흩어지지 않고 계속 이어지길 바랍니다.</p>
+    <p>사람의 마음이 머뭇거릴 때, 그 망설임에 용기를 덧붙여주는 일.</p>
+
+    <p>그게 Project.PAW가 시작된 본질적 이유입니다.</p>
 
     <p class="signature">– Project.PAW 드림 –</p>
   </main>
