--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
   </main>
 
   <div class="cta-dock">
-    <a href="#" class="btn-kakao">❤️ 후원하러 가기</a>
+    <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao" target="_blank">💬 단톡방 참여하기</a>
     <a href="#" class="btn-share">🔗 Paw 링크 복사</a>
   </div>
 
